<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0FFFF"
    >

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="34sp"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/cardview_dark_background"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/detailNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nama"
        android:textSize="24sp"
        android:padding="20dp"
        android:background="#E6E6FA"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detailHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:background="#E6E6FA"
        android:text="@string/harga"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:background="#E6E6FA"
        android:text="@string/desc"
        android:textStyle="bold"
        android:textSize="18sp"
        />


    <TextView
        android:id="@+id/tipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:background="#E6E6FA"
        android:text="@string/tipe"
        android:textSize="18sp"
        android:textStyle="bold"
        />



</LinearLayout>
